# memerace-contract

./: .pnp.cjs  Anchor.toml  README.md  package.json
migrations/: deploy.ts
programs/contest-program/: Cargo.toml
programs/contest-program/src/: constants.rs  context.rs  errors.rs  lib.rs  state.rs
programs/contest-program/src/instructions/: contest.rs  entry.rs  mod.rs  treasury.rs  voting.rs
programs/memerace-contract/: Cargo.toml
programs/memerace-contract/src/: lib.rs
tests/: contest.ts  entry.ts  memerace-contract.ts  treasury.ts  voting.ts
